--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
     deps, [
         {lager, ".*", {git, "https://github.com/erlang-lager/lager.git", {tag, "3.3.0"}}},
         {mysql, ".*", {git, "https://github.com/lrascao/mysql-otp",
-            {tag, "1.4.1-fork"}}},
+            {branch, "feature/otp21"}}},
         {pooler, ".*", {git, "https://github.com/seth/pooler.git", {tag, "1.5.2"}}},
         {plists, ".*", {git, "https://github.com/silviucpp/plists.git", {tag, "1.1.2"}}}
     ]
