Fix erlang:get_stacktrace issue
stacktrace_compat helps keep things simple, though more complicated solutions are possible

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,8 @@
         {lager, ".*", {git, "https://github.com/erlang-lager/lager.git", {tag, "3.3.0"}}},
         {mysql, ".*", {git, "https://github.com/filipepinto-miniclip/mysql-otp", {tag, "1.6.0"}}},
         {pooler, ".*", {git, "https://github.com/seth/pooler.git", {tag, "1.5.2"}}},
-        {plists, ".*", {git, "https://github.com/silviucpp/plists.git", {tag, "1.1.2"}}}
+        {plists, ".*", {git, "https://github.com/silviucpp/plists.git", {tag, "1.1.2"}}},
+        {stacktrace_compat, ".*", {git, "https://github.com/g-andrade/stacktrace_compat.git", {tag, "1.2.0"}}}
     ]
 }.
 
@@ -12,6 +13,7 @@
     [
         warnings_as_errors ,
         warn_export_all,
-        {parse_transform, lager_transform}
+        {parse_transform, lager_transform},
+        {parse_transform, stacktrace_transform}
     ]
 }.
